--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,3 +1,6 @@
 <resources>
     <string name="app_name">ScreenLockerTile</string>
+    <string name="foreground_notification_content_title">Screen Locker</string>
+    <string name="foreground_notification_content_text">Top to lock the screen</string>
+    <string name="foreground_notification_stop_action">Stop the locker</string>
 </resources>
