LockerWindowContent CustomView with all the fancy things for the locked screen

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -6,4 +6,6 @@
     <string name="foreground_notification_stop_action">Turn off</string>
     <string name="foreground_notification_lock_action">Lock screen</string>
     <string name="foreground_notification_unlock_action">Unlock screen</string>
+
+    <string name="screen_locked_content_touch_locked">Locked touch</string>
 </resources>
