--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,8 +1,8 @@
 <resources>
-    <string name="app_name">ScreenLocker App</string>
-    <string name="foreground_notification_content_title">Screen Locker</string>
+    <string name="app_name">ScreenTouchLocker</string>
+    <string name="foreground_notification_content_title">Screen Touch Locker</string>
     <string name="foreground_notification_content_text">Tap to lock the screen</string>
-    <string name="foreground_notification_content_text_big">While ScreenLocker is activated the device screen is locked and touches will not  have any effect.</string>
+    <string name="foreground_notification_content_text_big">While ScreenTouchLocker is activated the device screen is locked and touches will not  have any effect.</string>
     <string name="foreground_notification_stop_action">Turn off</string>
     <string name="foreground_notification_lock_action">Lock screen</string>
     <string name="foreground_notification_unlock_action">Unlock screen</string>
