Onboarding simple version - (Horizontal ViewPager)

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,5 +1,13 @@
 <resources>
     <string name="app_name">ScreenTouchLocker</string>
+
+    <string name="onboarding_title_1">Screen Touch Locker</string>
+    <string name="onboarding_subtitle_1">Lock your screen easily and enjoy your device\'s display without interruption by preventing unintended touches.</string>
+    <string name="onboarding_title_2">Shake &amp; Lock</string>
+    <string name="onboarding_subtitle_2">Looking for quicker activation? Just shake your device and go!</string>
+    <string name="onboarding_title_3">Quick Tile Access</string>
+    <string name="onboarding_subtitle_3">Screen Touch Locker also offers a Quick Tile access in your notification bar. Edit yours and put there your Quick Tile access.</string>
+
     <string name="foreground_notification_content_title">Screen Touch Locker</string>
     <string name="foreground_notification_content_text">Tap to lock the screen</string>
     <string name="foreground_notification_content_text_big">While ScreenTouchLocker is activated the device screen is locked and touches will not  have any effect.</string>
@@ -8,4 +16,6 @@
     <string name="foreground_notification_unlock_action">Unlock screen</string>
 
     <string name="screen_locked_content_touch_locked">Locked touch</string>
+    <string name="required_overlay_permissions">You might need to grant permissions for ScreenTouchLocker app to work correctly.</string>
+    <string name="lock_the_screen">Lock the Screen</string>
 </resources>
