--- a/app/src/main/res/values-es/strings.xml
+++ b/app/src/main/res/values-es/strings.xml
@@ -10,7 +10,7 @@
     <string name="onboarding_subtitle_3">Screen Touch Locker también ofrece un acceso rápido (Tile) en la barra superior de notificaciones. Edita tus accesos para tener tu acceso rápido de bloqueo siempre a mano.</string>
 
     <string name="foreground_notification_content_title">Screen Touch Locker</string>
-    <string name="foreground_notification_content_text">Pulsa para bloquear la pantalla</string>
+    <string name="foreground_notification_content_text">Pulsa para acceder a los ajustes</string>
     <string name="foreground_notification_content_text_big">Mientras ScreenTouchLocker está activado la pantalla del dispositivo estará bloqueada evitando así toques indeseados.</string>
     <string name="foreground_notification_stop_action">Apagar</string>
     <string name="foreground_notification_lock_action">Bloquear</string>
