--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -10,7 +10,7 @@
     <string name="onboarding_subtitle_3">Screen Touch Locker also offers a Quick Tile access in your notification bar. Edit yours and put there your Quick Tile access.</string>
 
     <string name="foreground_notification_content_title">Screen Touch Locker</string>
-    <string name="foreground_notification_content_text">Tap to lock the screen</string>
+    <string name="foreground_notification_content_text">Tap to access settings</string>
     <string name="foreground_notification_content_text_big">While ScreenTouchLocker is activated the device screen is locked and unintended touches will be prevented.</string>
     <string name="foreground_notification_stop_action">Turn off</string>
     <string name="foreground_notification_lock_action">Lock</string>
